# incarbench

./: .gitignore  CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
config/: incar_repair_prompt_template.json  llm_benchmark_config.example.json  llm_connectivity_test.example.json  task_type_prompt_templates.json
incar_generation_benchmark/: README.md  build_report.json  metadata_index.json  problem_set.csv
incar_generation_benchmark/leaderboards/: claude-haiku-4.5_summary.json  claude-opus-4.6_summary.json  claude-sonnet-4.6_summary.json  deepseek-chat_summary.json  deepseek-reasoner_summary.json  detailed_evaluation_report.md  gemini-3.1-pro-preview_summary.json  gpt-5.4-no-reasoning_summary.json  gpt-5.4-xhigh_summary.json  gpt-5.4_summary.json  llama-4-maverick-via-vertex-http_summary.json  qwen3.6-plus-no-thinking_summary.json  qwen3.6-plus-thinking_summary.json
incar_repair_benchmark/: README.md  build_report.json  metadata_index.json
incar_repair_benchmark/leaderboards/: claude-haiku-4.5_summary.json  claude-opus-4.6_summary.json  claude-sonnet-4.6_summary.json  deepseek-chat_summary.json  deepseek-reasoner_summary.json  gemini-3.1-pro-preview_summary.json  gpt-5.4-no-reasoning_summary.json  gpt-5.4-xhigh-1_summary.json  gpt-5.4_summary.json  llama-4-maverick-via-vertex-http_summary.json  qwen3.6-plus-no-thinking_summary.json  qwen3.6-plus-thinking_summary.json  repair_evaluation_report.md
problems/: problem_set_v1.0.csv
scripts/: __init__.py  benchmark_utils.py  build_incar_generation_benchmark.py  build_incar_repair_benchmark.py  generate_leaderboard_markdown_report.py  generate_repair_leaderboard_markdown_report.py  incar_generation_utils.py  incar_repair_utils.py  llm_config_utils.py  run_llm_incar_batch.py  run_llm_incar_repair_batch.py  score_incar_generation_batch.py  score_incar_repair_batch.py
